# ML-practice

./: linear_algebra.ipynb  pyproject.toml
tasks_linalg/: task1.py  task2.py  task3.py  task4.py
